--- a/AndroidServer/src/main/resources/application.properties
+++ b/AndroidServer/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/androidshop
 spring.datasource.username=root
 spring.datasource.password=root
 # hibernate configurations
 spring.jpa.show-sql=true
-
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 log4j.logger.org.hibernate=info
 #entitymanager.packagesToScan=model
+# App Properties
+happypets.app.jwtSecret=androidproject
+happypets.app.jwtExpirationMs=86400000
