--- a/AndroidServer/src/main/resources/application.properties
+++ b/AndroidServer/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/androidshop
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 # hibernate configurations
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
